docs: Cria documentação para busca de usuário por nome
