# src/routes/readUser.ts
@@ -3,7 +3,7 @@ import { readUserController } from "../modules/users/useCases/readUser";
 
 const listUserRouter = Router();
 
-listUserRouter.get("/user", async (request, response) => {
+listUserRouter.get("/user/:name", async (request, response) => {
   await readUserController.handle(request, response);
 });
 
