# swagger.json
@@ -31,6 +31,37 @@
           }
         }
       }
+    },
+    "/user/{name}": {
+      "get": {
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "description": "username",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "tags": ["user"],
+        "description": "Realiza a busca do usuário pelo nome",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/listUserResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "User not exists"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -83,6 +114,41 @@
             "type": "string",
             "description": "descrição do usuário",
             "example": "description example"
+          }
+        }
+      },
+      "listUserResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "id do usuario",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string",
+            "description": "Nome do usuário",
+            "example": "name example"
+          },
+          "dob": {
+            "type": "Date",
+            "description": "Data de aniversário",
+            "example": "2022-10-03"
+          },
+          "address": {
+            "type": "string",
+            "description": "Endereço do usuário",
+            "example": "address example"
+          },
+          "description": {
+            "type": "string",
+            "description": "descrição do usuário",
+            "example": "description example"
+          },
+          "createAt": {
+            "type": "string",
+            "description": "Data de cadastro do usuário",
+            "format": "date-time"
           }
         }
       }
